# ciphercore

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Jenkinsfile  LICENSE.txt  README.md  cbindgen.toml  generate_c_header.sh
.cargo/: config.toml
.github/workflows/: ci.yaml  python-release.yml  trigger_submodule_update.yaml  wheels.yml
ciphercore-adapters/: Cargo.toml
ciphercore-adapters/src/: adapters_utils.rs  data_type_adapter.rs  graph_adapter.rs  lib.rs
ciphercore-base/: Cargo.toml
ciphercore-base/example_scripts/matrix_multiplication/: build_graph.sh  inputs.json  run.sh
ciphercore-base/example_scripts/millionaires_problem/: build_graph.sh  inputs.json  run.sh
ciphercore-base/example_scripts/minimum/: build_graph.sh  inputs.json  run.sh
ciphercore-base/example_scripts/set_intersection/: build_graph.sh  inputs.json
ciphercore-base/example_scripts/sort/: build_graph.sh  run.sh
ciphercore-base/example_scripts/sorting/: build_graph.sh  inputs.json  run.sh
ciphercore-base/src/: applications.rs  broadcast.rs  bytes.rs  constants.rs  custom_ops.rs  data_types.rs  data_values.rs  errors.rs  evaluators.rs  graphs.rs  inline.rs  join_utils.rs  lib.rs  mpc.rs  ops.rs  optimizer.rs  random.rs  slices.rs  type_inference.rs  typed_value.rs  typed_value_operations.rs  typed_value_secret_shared.rs  typed_value_serialization.rs  version.rs
ciphercore-base/src/applications/: kmeans.rs  matrix_multiplication.py  matrix_multiplication.rs  millionaires.py  millionaires.rs  minimum.py  minimum.rs  set_intersection.rs  sort.rs  sorting.rs
ciphercore-base/src/csv/: test_utils.rs  utils.rs
ciphercore-base/src/evaluators/: get_result_util.rs  join.rs  join_test_utils.rs  simple_evaluator.rs
ciphercore-base/src/inline/: associative_iterate_inliner.rs  data_structures.rs  empty_state_iterate_inliner.rs  exponential_inliner.rs  inline_common.rs  inline_ops.rs  inline_test_utils.rs  simple_iterate_inliner.rs
ciphercore-base/src/mpc/: low_mc.rs  mpc_apply_permutation.rs  mpc_arithmetic.rs  mpc_compiler.rs  mpc_conversion.rs  mpc_equivalence_class.rs  mpc_psi.rs  mpc_radix_sort.rs  mpc_truncate.rs  resharing.rs  utils.rs
ciphercore-base/src/mpc/low_mc_constants/: generate_matrices.py
ciphercore-base/src/ops/: adder.rs  auc.rs  broadcast_test.rs  clip.rs  comparisons.rs  fixed_precision.rs  goldschmidt_division.rs  integer_key_sort.rs  inverse_sqrt.rs  long_division.rs  min_max.rs  multiplexer.rs  newton_inversion.rs  pwl.rs  sorting.rs  taylor_exponent.rs  utils.rs
ciphercore-base/src/ops/fixed_precision/: fixed_multiply.rs  fixed_precision_config.rs
ciphercore-base/src/ops/pwl/: approx_exponent.rs  approx_gelu.rs  approx_gelu_derivative.rs  approx_pointwise.rs  approx_sigmoid.rs
ciphercore-base/src/optimizer/: constant_optimizer.rs  dangling_nodes_optimizer.rs  duplicates_optimizer.rs  meta_operation_optimizer.rs  optimize.rs
ciphercore-base/src/test_data/: version_testcase.txt
ciphercore-base/src/typed_value_secret_shared/: replicated_shares.rs
ciphercore-utils/: Cargo.toml
ciphercore-utils/src/: errors.rs  execute_main.rs  lib.rs  test_utils.rs
ciphercore-wrappers/C-wrapper/: CResults.h  CStr.h  CVec.h  Error.h  build.sh  ciphercore_adapters.h  ciphercore_auxiliary_structs.h  ciphercore_context.h  ciphercore_data_types.h  ciphercore_graph.h  ciphercore_node.h  ciphercore_structs.h  example.c
ciphercore-wrappers/cadapter/: Cargo.toml
ciphercore-wrappers/cadapter/src/: adapters_utils.rs  data_type_adapter.rs  graph_adapter.rs  lib.rs
ciphercore-wrappers/python/: CMakeLists.txt  Cargo.toml  Example.ipynb  LICENSE  MANIFEST.in  README.md  a.py  build_wheels.sh  ciphercore.py  prepare.sh  pyproject.toml  setup.py  test.sh
ciphercore-wrappers/python/include/: CResults.h  CStr.h  CVec.h  Error.h  ciphercore_adapters.h  ciphercore_auxiliary_structs.h  ciphercore_context.h  ciphercore_data_types.h  ciphercore_graph.h  ciphercore_node.h  ciphercore_structs.h
ciphercore-wrappers/python/py/ciphercore/: __init__.py
ciphercore-wrappers/python/py/ciphercore/internal/: __init__.py
ciphercore-wrappers/python/src/: ciphercore_native.cpp  lib.rs
ciphercore-wrappers/pywrapper-macro/: Cargo.toml
ciphercore-wrappers/pywrapper-macro/src/: lib.rs
reference/: main.md  runtime.md
runtime/example/data/median/party0/: input.txt
runtime/example/data/median/party1/: input.txt
runtime/example/data/median/party2/: input.txt
runtime/example/data/two_millionaires/: graph.json
runtime/example/data/two_millionaires/party0/: input.txt
runtime/example/data/two_millionaires/party1/: input.txt
runtime/example/data/two_millionaires/party2/: input.txt
runtime/example/python/: combined_example.py
runtime/example/scripts/: do_all.sh  run_compute_nodes.sh  run_data_nodes.sh  run_orchestrator.sh  tear_down.sh
runtime/proto/: data.proto  party.proto  results.proto  value.proto
