[workspace]

members = [
    "ciphercore-utils",
    "ciphercore-base",
    "ciphercore-wrappers/python",
    "ciphercore-wrappers/pywrapper-macro",
]

default-members = [
    "ciphercore-utils",
    "ciphercore-base",
]

[patch.crates-io]
ciphercore-base = { path = "ciphercore-base" }
ciphercore-utils = { path = "ciphercore-utils" }
pywrapper-macro = { path = "ciphercore-wrappers/pywrapper-macro" }
ciphercore-pywrapper = { path = "ciphercore-wrappers/python" }
