[package]
name = "ciphercore-base"
version = "0.3.1"
authors = ["CipherMode Labs, Inc."]
edition = "2021"
description = "The base package of CipherCore: computation graphs API, Secure MPC Compiler, utilities for graph evaluation and inspection"
license = "Apache-2.0"
repository = "https://github.com/ciphermodelabs/ciphercore/"
readme = "../README.md"
keywords = ["data-sharing", "cryptography", "secure-computation", "secure-mpc", "privacy-enhancing"]
categories = ["cryptography"]
homepage = "https://www.ciphermode.com/"

[dependencies]
ciphercore-utils = "=0.3.0"
pywrapper-macro = { version = "0.3.1", optional = true}
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = { version = "1.0.94", features = ["arbitrary_precision"] }
getrandom = { version = "0.2.9", features = ["js"] }
typetag = "0.2.8"
petgraph = "0.6.0"
maplit = "1.0.2"
rand = "0.8"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
atomic_refcell = "0.1.8"
env_logger = "0.9.0"
clap = { version = "3.0.14", features = ["derive"] }
ndarray = "0.15.1"
json = "0.12.4"
arbitrary = { version = "1", optional = true, features = ["derive"] }
pyo3 = { version = "0.17.1", optional = true, features = ["extension-module"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
tonic = { version = "0.8.3", optional = true }
aes = "0.8.2"
cipher = { version = "0.4.4", features = ["block-padding"] }

[dev-dependencies]
serde_test = "1.0.130"
bincode = "1.3.3"
tokio = {version = "1.21.2", features = ["macros", "rt", "rt-multi-thread"]}
futures = "0.3.21"
futures-core = "0.3.21"
futures-util = "0.3.21"

[features]
default = []
fuzzing = []
py-binding = ["dep:pyo3", "dep:pywrapper-macro"]
tonic-errors = ["dep:tonic"]

[[bin]]
name = "ciphercore_compile"
path = "src/bin/ciphercore_compile.rs"

[[bin]]
name = "ciphercore_inspect"
path = "src/bin/ciphercore_inspect.rs"

[[bin]]
name = "ciphercore_matrix_multiplication"
path = "src/bin/ciphercore_matrix_multiplication.rs"

[[bin]]
name = "ciphercore_millionaires"
path = "src/bin/ciphercore_millionaires.rs"

[[bin]]
name = "ciphercore_minimum"
path = "src/bin/ciphercore_minimum.rs"

[[bin]]
name = "ciphercore_sort"
path = "src/bin/ciphercore_sort.rs"

[[bin]]
name = "ciphercore_visualize_context"
path = "src/bin/ciphercore_visualize_context.rs"

[[bin]]
name = "ciphercore_evaluate"
path = "src/bin/ciphercore_evaluate.rs"

[[bin]]
name = "ciphercore_split_parties"
path = "src/bin/ciphercore_split_parties.rs"

[[bin]]
name = "ciphercore_gen_zero_input"
path = "src/bin/ciphercore_gen_zero_input.rs"

[[bin]]
name = "ciphercore_a2b"
path = "src/bin/ciphercore_a2b.rs"
