[package]
name = "ciphercore-utils"
version = "0.3.0"
authors = ["CipherMode Labs, Inc."]
edition = "2021"
description = "Convenience functions and wrappers used by CipherCore crates"
license = "Apache-2.0"
repository = "https://github.com/ciphermodelabs/ciphercore/"
readme = "../README.md"
keywords = ["data-sharing", "cryptography", "secure-computation", "secure-mpc", "privacy-enhancing"]
categories = ["cryptography"]
homepage = "https://www.ciphermode.com/"

[dependencies]
serde = { version = "=1.0.140", features = ["derive", "rc"] }
serde_json = "=1.0.94"
log = "=0.4.18"
chrono = "=0.4.19"

[features]
default = []
