[package]
name = "cadapter"
version = "0.2.0"
authors = ["CipherMode Labs, Inc."]
edition = "2021"
description = "An auxiliary crate to bridge CipherCore with its C bindings"
license = "Apache-2.0"
repository = "https://github.com/ciphermodelabs/ciphercore/"
readme = "../README.md"
keywords = ["data-sharing", "cryptography", "secure-computation", "secure-mpc", "privacy-enhancing"]
categories = ["cryptography"]
homepage = "https://www.ciphermode.com/"

[dependencies]
ciphercore-base = { path = "../../ciphercore-base"}
ciphercore-utils = { path = "../../ciphercore-utils" }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.94"
typetag = "0.1.7"
petgraph = "0.6.0"
maplit = "1.0.2"
openssl = "0.10"
rand = "0.8"
chrono = "0.4.19"
atomic_refcell = "0.1.8"
env_logger = "0.9.0"
clap = { version = "3.0.14", features = ["derive"] }
ndarray = "0.15.1"
json = "0.12.4"

[dev-dependencies]
serde_test = "1.0.130"

[lib]
name= "cadapter"
crate-type = ["staticlib","dylib"]

[features]
default = []

