[package]
name = "ciphercore-pywrapper"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciphercore-base = { path = "../../ciphercore-base", features=["py-binding"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"
ndarray = "0.15.1"
numpy = "0.16.2"
pywrapper-macro = { path = "../pywrapper-macro" }

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]

[features]
default = []
nightly-features = []
