[package]
name = "ciphercore-pywrapper"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciphercore-base = { version = "=0.1.3", features=["py-binding"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.94"
ndarray = "0.15.1"
numpy = "0.17.2"
pywrapper-macro = { path = "../pywrapper-macro" }

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[features]
default = []
