[package]
name = "pywrapper-macro"
authors = ["CipherMode Labs, Inc."]
version = "0.1.3"
edition = "2021"
description = "Macros needed to create a Python wrapper for CipherCore"
license = "Apache-2.0"
repository = "https://github.com/ciphermodelabs/ciphercore/"
readme = "../../README.md"
keywords = ["data-sharing", "cryptography", "secure-computation", "secure-mpc", "privacy-enhancing"]
categories = ["cryptography"]
homepage = "https://www.ciphermode.com/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.99", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0"
lazy_static = "1.4.0"
